# transformers-mcp

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/transformers_mcp/: __init__.py
